# otp

./: .gitignore  CMakeLists.txt  QrCodeGeneratorDemo.cpp  README.md  cotp.cpp  otp_uri.cpp  qrcodegen.cpp
cotp/: qr_code.hpp
